<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewCover"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_book_placeholder"
                tools:ignore="ContentDescription,ImageContrastCheck" />


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/author_name"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/buttonReadBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp"
                android:text="@string/read_book"
                android:textColor="@android:color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonMarkAsRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp"
                android:text="@string/mark_as_read"
                android:textColor="@android:color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonMarkAsUnread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp"
                android:text="@string/mark_as_unread"
                android:textColor="@android:color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonDeleteBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_book"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp"
                android:text="@string/back_to_main_menu"
                android:textColor="@android:color/white"
                tools:ignore="TextContrastCheck" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>