<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/white">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"/>

        <!-- App Name -->
        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ebook_library"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/sign_in"
            android:textColor="#212121" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/create_account"
            android:textColor="#212121" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>