<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/white">

        <!-- Email Field -->
        <EditText
            android:id="@+id/editTextEmail"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/editTextPassword"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Login Button -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/log_in"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <!-- Link to Signup Activity -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:onClick="goToSignup"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@android:color/holo_blue_dark"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>