<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <!-- Hebrew support: text content aligned to the left -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:gravity="end"
        tools:ignore="RtlSymmetry">

        <!-- Ensures title fits in one line -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/book_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textAlignment="viewEnd"
            android:textColor="#8D6E63"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/author_name"
            android:textAlignment="viewEnd"
            android:textColor="#8D6E63"
            android:textSize="12sp" /> <!-- Allows description to wrap but limits to 3 lines -->

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewCover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/book_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_book_placeholder"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>
